# cedant-historical-agent-public

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agents/: __init__.py
agents/core/: __init__.py  agent_activities.py  agent_goal_workflow.py  agent_prompt_generators.py  goal_registry.py  prompts.py
agents/supervisor/: __init__.py  goal.py  tool_completion.py
agents/supervisor/tools/: __init__.py  cedant_activities.py  generate_diff.py  populate_cedant_data.py  tool_registry.py
agents/supervisor/tools/historical_matcher/: __init__.py  event_processing_workflow.py  matching_activities.py  parallel_processor.py
agents/supervisor/tools/submission_pack_parser/: __init__.py  goal.py  tool_completion.py
agents/supervisor/tools/submission_pack_parser/activities/: __init__.py  submission_pack_activities.py
agents/supervisor/tools/submission_pack_parser/tools/: __init__.py  extraction_prompts.py  llm_extractor.py  locate_submission_pack.py  tool_registry.py
agents/supervisor/tools/submission_pack_parser/tools/sheet_identification/: __init__.py  activities.py  goal.py  prompt.py  tool_completion.py  tools.py
agents/supervisor/tools/utils/: __init__.py  column_mapping.py  data_cleaners.py  data_loaders.py  fuzzy_matching.py
api/: main.py
docs/: .$old-diagram.drawio.bkp  BLOG.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ModernChatWindow.jsx
frontend/src/services/: apiService.js  index.js
frontend/src/styles/: modern.css
models/: __init__.py  core.py  requests.py  submission_pack.py
shared/: __init__.py  config.py
shared/bridge/: __init__.py  workflow.py
worker/: __init__.py  health_monitor.py  logging_config.py  worker.py
