[project]
name = "temporal-reinsurance-agent"
version = "0.1.0"
description = "A minimal AI agent implementation using Temporal workflows with reinsurance data access"
requires-python = ">=3.10"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
license = {text = "MIT"}
keywords = ["temporal", "ai-agent", "reinsurance", "workflow", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "litellm>=1.72.2",
    "temporalio>=1.12.0",
    "uvicorn>=0.34.3",
    "requests>=2.32.4",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pypdf2>=3.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
optimization = [
    "gepa>=0.0.22",
]

[project.urls]
Homepage = "https://github.com/example/temporal-reinsurance-agent"
Repository = "https://github.com/example/temporal-reinsurance-agent"
Documentation = "https://github.com/example/temporal-reinsurance-agent#readme"
Issues = "https://github.com/example/temporal-reinsurance-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling what to include
[tool.hatch.build.targets.wheel]
packages = ["activities", "agents", "api", "models", "prompts", "shared", "tools", "workflows", "worker"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["activities", "api", "models", "prompts", "shared", "tools", "workflows", "worker"]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["activities", "api", "models", "prompts", "shared", "tools", "workflows", "worker"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
